--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,4 +1,4 @@
-# Working directory has to be the top directory "news_platform" - the directory contining the "manage.py"
+# Working directory has to be the top directory "news_platform" - the directory containing the "manage.py"
 
 [supervisord]
 nodaemon=true
@@ -49,7 +49,7 @@ priority=100
 #priority=250
 
 [program:python]
-command=bash -c 'python ./manage.py runserver 0.0.0.0:80'
+command=bash -c 'if [ $DEBUG ]; then python ./manage.py runserver 0.0.0.0:8000; else gunicorn -c ./gunicorn.conf.py; fi'
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
