Fix missing productionfiles folder. #patch

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -49,6 +49,7 @@ priority=100
 #priority=250
 
 [program:python]
+directory=/sweepstake
 command=bash -c 'if [ $DEBUG ]; then python ./manage.py runserver 0.0.0.0:80; else gunicorn -c ./gunicorn.conf.py; fi'
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
