Add redis caching. #patch

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,14 +7,14 @@ nodaemon=true
 port = 9001
 priority=100
 
-#[program:redis]
-#command=redis-server
-#stdout_logfile=/dev/stdout
-#stdout_logfile_maxbytes=0
-#stderr_logfile=/dev/stderr
-#stderr_logfile_maxbytes=0
-#autorestart=true
-#priority=150
+[program:redis]
+command=redis-server
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=true
+priority=150
 
 #[program:celery-worker]
 #command=bash -c 'while ! nc -z localhost 6379 </dev/null; do echo "celery-worker waiting for redis at port :6379"; sleep 3; done && celery -A news_platform worker --loglevel INFO --without-mingle --without-gossip'
