--- a/supervisord.conf
+++ b/supervisord.conf
@@ -16,41 +16,41 @@ stderr_logfile_maxbytes=0
 autorestart=true
 priority=150
 
-#[program:celery-worker]
-#command=bash -c 'while ! nc -z localhost 6379 </dev/null; do echo "celery-worker waiting for redis at port :6379"; sleep 3; done && celery -A news_platform worker --loglevel INFO --without-mingle --without-gossip'
-#autorestart=true
-#stopwaitsecs=60
-#stdout_logfile=/dev/stdout
-#stdout_logfile_maxbytes=0
-#stderr_logfile=/dev/stderr
-#stderr_logfile_maxbytes=0
-#priority=200
+[program:celery-worker]
+command=bash -c 'while ! nc -z localhost 6379 </dev/null; do echo "celery-worker waiting for redis at port :6379"; sleep 3; done && celery -A sweepstake worker --loglevel INFO --without-mingle --without-gossip'
+autorestart=true
+stopwaitsecs=60
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+priority=200
 
-#[program:celery-beat]
-#command=bash -c 'while ! nc -z localhost 80 </dev/null; do echo "celery-beat waiting for django at port :80"; sleep 3; done && celery -A news_platform beat --scheduler django_celery_beat.schedulers:DatabaseScheduler --loglevel INFO'
-#stopwaitsecs=60
-#stdout_logfile=/dev/stdout
-#stdout_logfile_maxbytes=0
-#stderr_logfile=/dev/stderr
-#stderr_logfile_maxbytes=0
-#autorestart=true
-#priority=350
+[program:celery-beat]
+command=bash -c 'while ! nc -z localhost 80 </dev/null; do echo "celery-beat waiting for django at port :80"; sleep 3; done && celery -A sweepstake beat --scheduler django_celery_beat.schedulers:DatabaseScheduler --loglevel INFO'
+stopwaitsecs=60
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=true
+priority=350
 
-#[program:celery-flower]
-#command=bash -c 'while ! nc -z localhost 6379 </dev/null; do echo "celery-flower waiting for redis at port :6379"; sleep 3; done && celery -A news_platform flower'
-#startsecs=20
-#stopwaitsecs=60
-#priority=40
-#stdout_logfile=/dev/stdout
-#stdout_logfile_maxbytes=0
-#stderr_logfile=/dev/stderr
-#stderr_logfile_maxbytes=0
-#autorestart=true
-#priority=250
+[program:celery-flower]
+command=bash -c 'while ! nc -z localhost 6379 </dev/null; do echo "celery-flower waiting for redis at port :6379"; sleep 3; done && celery -A sweepstake flower'
+startsecs=20
+stopwaitsecs=60
+priority=40
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=true
+priority=250
 
 [program:python]
 directory=/sweepstake
-command=bash -c 'if [ $DEBUG ]; then python ./manage.py runserver 0.0.0.0:80; else gunicorn -c ./gunicorn.conf.py; fi'
+command=bash -c 'while ! nc -z localhost 6379 </dev/null; do echo "django waiting for redis at port :6379"; sleep 3; done && if [ $DEBUG ]; then python ./manage.py runserver 0.0.0.0:80; else gunicorn -c ./gunicorn.conf.py; fi'
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
