--- a/supervisord.conf
+++ b/supervisord.conf
@@ -50,7 +50,7 @@ priority=250
 
 [program:python]
 directory=/sweepstake
-command=bash -c 'while ! nc -z localhost 6379 </dev/null; do echo "django waiting for redis at port :6379"; sleep 3; done && if [ $DEBUG == "True" ]; then echo "Run Django Server" && python ./manage.py runserver 0.0.0.0:80; else echo "Run Gunicorn Server" && gunicorn -c ./gunicorn.conf.py; fi'
+command=bash -c 'while ! nc -z localhost 6379 </dev/null; do echo "django waiting for redis at port :6379"; sleep 3; done && if [ $DEBUG ]; then echo "Run Django Server" && python ./manage.py runserver 0.0.0.0:80; else echo "Run Gunicorn Server" && gunicorn -c ./gunicorn.conf.py; fi'
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
