Add postgres option. #patch

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -27,7 +27,7 @@ stderr_logfile_maxbytes=0
 priority=200
 
 [program:celery-beat]
-command=bash -c 'while ! nc -z localhost 80 </dev/null; do echo "celery-beat waiting for django at port :80"; sleep 3; done && celery -A sweepstake beat --scheduler django_celery_beat.schedulers:DatabaseScheduler --loglevel INFO'
+command=bash -c 'while ! nc -z localhost 80 </dev/null; do echo "celery-beat waiting for django at port :80"; sleep 3; done && celery -A sweepstake beat --loglevel INFO'
 stopwaitsecs=60
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
@@ -35,6 +35,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 priority=350
+# --scheduler django_celery_beat.schedulers:DatabaseScheduler
 
 [program:celery-flower]
 command=bash -c 'while ! nc -z localhost 6379 </dev/null; do echo "celery-flower waiting for redis at port :6379"; sleep 3; done && celery -A sweepstake flower'
